@startuml mld-carvault
!pragma layout smetana
title CarVault — Modèle Logique de Données (MLD)
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 8
skinparam class {
  BackgroundColor #fafafa
  BorderColor #0b0b0f
  ArrowColor #38bdf8
}

hide methods
hide circle

' ─── Tables relationnelles (PostgreSQL) ──────────────────────────────────

entity "utilisateurs" as utilisateurs {
  * **id** : TEXT <<PK>>
  --
  email : TEXT <<UNIQUE>>
  password : TEXT
  firstName : TEXT
  lastName : TEXT
  avatar : TEXT
  notifEmail : BOOLEAN
  notifPush : BOOLEAN
  notifWeekly : BOOLEAN
  isPremium : BOOLEAN
  premiumSource : TEXT
  stripeCustomerId : TEXT
  stripeSubscriptionId : TEXT
  premiumExpiresAt : TIMESTAMP
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "vehicules" as vehicules {
  * **id** : TEXT <<PK>>
  --
  #userId : TEXT <<FK>>
  brand : TEXT
  model : TEXT
  year : INTEGER
  mileage : INTEGER
  purchaseMileage : INTEGER
  photo : TEXT
  licensePlate : TEXT
  color : TEXT
  fuelType : FuelType
  purchasePrice : DOUBLE PRECISION
  carapiTrimId : INTEGER
  msrp : DOUBLE PRECISION
  horsepower : INTEGER
  engineSize : DOUBLE PRECISION
  transmission : TEXT
  bodyType : TEXT
  doors : INTEGER
  fiscalPower : INTEGER
  co2 : INTEGER
  critAir : INTEGER
  firstRegistrationDate : TIMESTAMP
  laCentraleVersionId : INTEGER
  estimatedValue : DOUBLE PRECISION
  maintenanceConfig : JSONB
  maintenanceLastKm : JSONB
  monthlyFuelBudget : DOUBLE PRECISION
  annualKmGoal : INTEGER
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "documents" as documents {
  * **id** : TEXT <<PK>>
  --
  #vehicleId : TEXT <<FK>>
  name : TEXT
  type : DocumentType
  filePath : TEXT
  fileName : TEXT
  expirationDate : TIMESTAMP
  notes : TEXT
  reminderDays : INTEGER[]
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "depenses" as depenses {
  * **id** : TEXT <<PK>>
  --
  #vehicleId : TEXT <<FK>>
  amount : DOUBLE PRECISION
  category : ExpenseCategory
  date : TIMESTAMP
  description : TEXT
  mileage : INTEGER
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "alertes" as alertes {
  * **id** : TEXT <<PK>>
  --
  #userId : TEXT <<FK>>
  title : TEXT
  message : TEXT
  type : AlertType
  isRead : BOOLEAN
  dueDate : TIMESTAMP
  snoozedUntil : TIMESTAMP
  emailSent : BOOLEAN
  createdAt : TIMESTAMP
}

entity "entrees_kilometrage" as entrees_km {
  * **id** : TEXT <<PK>>
  --
  #vehicleId : TEXT <<FK>>
  mileage : INTEGER
  date : TIMESTAMP
  notes : TEXT
  createdAt : TIMESTAMP
}

entity "entrees_carburant" as entrees_carb {
  * **id** : TEXT <<PK>>
  --
  #vehicleId : TEXT <<FK>>
  date : TIMESTAMP
  mileage : INTEGER
  liters : DOUBLE PRECISION
  pricePerLiter : DOUBLE PRECISION
  totalCost : DOUBLE PRECISION
  isFull : BOOLEAN
  notes : TEXT
  createdAt : TIMESTAMP
}

entity "abonnements_push" as abonnements_push {
  * **id** : TEXT <<PK>>
  --
  #userId : TEXT <<FK>>
  endpoint : TEXT
  p256dh : TEXT
  auth : TEXT
  createdAt : TIMESTAMP
  --
  <<UNIQUE (userId, endpoint)>>
}

entity "liens_partage" as liens_partage {
  * **id** : TEXT <<PK>>
  --
  #vehicleId : TEXT <<FK>>
  #userId : TEXT <<FK>>
  token : TEXT <<UNIQUE>>
  expiresAt : TIMESTAMP
  createdAt : TIMESTAMP
  viewCount : INTEGER
  lastViewedAt : TIMESTAMP
  passwordHash : TEXT
  hidePurchasePrice : BOOLEAN
  label : TEXT
}

entity "refresh_tokens" as refresh_tokens {
  * **id** : TEXT <<PK>>
  --
  #userId : TEXT <<FK>>
  token : TEXT <<UNIQUE>>
  expiresAt : TIMESTAMP
  createdAt : TIMESTAMP
}

entity "password_reset_tokens" as pwd_reset {
  * **id** : TEXT <<PK>>
  --
  #userId : TEXT <<FK>>
  token : TEXT <<UNIQUE>>
  expiresAt : TIMESTAMP
  createdAt : TIMESTAMP
}

' ─── Types énumérés PostgreSQL ─────────────────────────────────────────

package "Enums PostgreSQL" <<Rectangle>> {
  class DocumentType <<enumeration>> {
    INSURANCE
    TECHNICAL_INSPECTION
    INVOICE
    WARRANTY
    REGISTRATION
    ACCIDENT_REPORT
    OTHER
  }
  class ExpenseCategory <<enumeration>> {
    MAINTENANCE
    OIL_CHANGE
    BRAKES
    TIRES
    BODYWORK
    WINDSHIELD
    TECHNICAL_INSPECTION
    PARKING
    TOLL
    CLEANING
    FINE
    OTHER
  }
  class AlertType <<enumeration>> {
    DOCUMENT_EXPIRY
    MAINTENANCE_DUE
    INSPECTION_DUE
    ...
  }
  class FuelType <<enumeration>> {
    GASOLINE
    DIESEL
    HYBRID
    ELECTRIC
    LPG
    OTHER
  }
}

' ─── Clés étrangères ─────────────────────────────────────────────────────

utilisateurs ||--o{ vehicules : "userId\nON DELETE CASCADE"
utilisateurs ||--o{ alertes : "userId\nON DELETE CASCADE"
utilisateurs ||--o{ abonnements_push : "userId\nON DELETE CASCADE"
utilisateurs ||--o{ refresh_tokens : "userId\nON DELETE CASCADE"
utilisateurs ||--o{ pwd_reset : "userId\nON DELETE CASCADE"
utilisateurs ||--o{ liens_partage : "userId\nON DELETE CASCADE"

vehicules ||--o{ documents : "vehicleId\nON DELETE CASCADE"
vehicules ||--o{ depenses : "vehicleId\nON DELETE CASCADE"
vehicules ||--o{ entrees_km : "vehicleId\nON DELETE CASCADE"
vehicules ||--o{ entrees_carb : "vehicleId\nON DELETE CASCADE"
vehicules ||--o{ liens_partage : "vehicleId\nON DELETE CASCADE"

note bottom of utilisateurs
  **Légende MLD**
  • **id** = clé primaire (#PK)
  • #colonne = clé étrangère (#FK)
  • Schéma dérivé du schema Prisma (PostgreSQL)
  • Suppression en cascade sur toutes les FK
end note

@enduml
